--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ python:
 # command to install dependencies
 install: "python setup.py build"
 # command to run tests
-script: tests/testme.py
+script: python tests/testme.py
