added install lines
expanded the install lines to install package to build server.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ python:
   - "nightly"
 
 # command to install dependencies
-install: "python setup.py build"
+install:
+  - python setup.py build
+  - python setup.py install
+
 # command to run tests
 script: python tests/testme.py
